site comida oriental 100% pronto

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Cardapio</a></li>
                 <li><a href="#">Sobre nós</a></li>
-                <button class="button" onclick="linkClick()" >Entrar</button>
+                <button class="button">Entrar</button>
             </ul>
-            <button class="header-button" onclick="linkClick()">Entrar</button>
+            
     
     </header>
 
